k8s/magento/09_redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
    k8s-app: magento
  name: redis
  namespace: magento
spec:
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: magento
spec:
  selector:
    matchLabels:
      app: redis
  serviceName: redis
  template:
    metadata:
      labels:
        app: redis
        k8s-app: magento
    spec:
      tolerations:
      - key: "application"
        operator: "Equal"
        value: "general"
        effect: "NoSchedule"
      containers:
      - image: redis
        imagePullPolicy: IfNotPresent
        name: redis
        resources:
          limits:
            cpu: 500m
            memory: 4Gi
          requests:
            cpu: 50m
            memory: 1Gi
